refactor code, introduce unit tests, improve validation